--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
 		<title>Piyush Sneh, Believe in 7</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+	    <canvas id="myCanvas"></canvas>
+        <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js"></script>
+        <script type="text/javascript" src="main.js"></script>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -28,4 +34,7 @@
 		</footer>
 	</body>
 </html>
+
+
+
 
